# edgar-mcp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
scripts/: capture_fixture.py  diagnose_accenture.py  diagnose_failures.py  diagnose_failures_100.py  diagnose_sections.py  stress_test_100.py  test_nvidia_diff.py  test_sections_live.py
src/edgar_mcp/: __init__.py  cache.py  client.py  models.py  server.py
src/edgar_mcp/parsers/: diff.py  form4.py  sections.py  xbrl.py
tests/: test_sections.py  test_tools.py
tests/fixtures/: company_tickers.json  efts_8K_recent.json  filing_index_320193.json  form4_cook.xml  section_risk_factors_current.html  section_risk_factors_previous.html  xbrl_companyfacts_320193.json
