[project]
name = "edgar-mcp"
version = "0.1.0"
description = "MCP server for the SEC EDGAR filing system"
readme = "README.md"
authors = [
    { name = "dilane F", email = "dilanekamga777@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "diskcache>=5.6.3",
    "httpx>=0.28.1",
    "mcp[cli]>=1.27.0",
    "pydantic>=2.13.3",
    "selectolax>=0.4.7",
    "xmltodict>=1.0.4",
]

[project.scripts]
edgar-mcp = "edgar_mcp:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
